--- a/src/main/resources/com/max1maka/primary.fxml
+++ b/src/main/resources/com/max1maka/primary.fxml
@@ -49,7 +49,7 @@
             <Label prefHeight="26.0" prefWidth="98.0" text=" Толщина линии:" />
             <TextField fx:id="brushSize" prefHeight="26.0" prefWidth="35.0" text="10" />
             <Label prefHeight="26.0" prefWidth="85.0" text=" Инструменты:" />
-            <GridPane fx:id="gridInstruments" gridLinesVisible="true" prefHeight="26.0" prefWidth="339.0">
+            <GridPane fx:id="gridInstruments" gridLinesVisible="true" prefHeight="26.0" prefWidth="217.0">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -59,24 +59,11 @@
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <ImageView fx:id="imgBrush" fitHeight="26.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../assets/icons8-кисть-64.png" />
-                     </image>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </ImageView>
                   <ImageView fx:id="imgCircle" fitHeight="26.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5">
                      <image>
                         <Image url="@../../assets/icons8-круг-64.png" />
@@ -117,15 +104,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-                  <ImageView fx:id="imgPencil" fitHeight="27.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
-                     <image>
-                        <Image url="@../../assets/icons8-редактировать-100.png" />
-                     </image>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </ImageView>
-                  <ImageView fx:id="imgPolygon" fitHeight="27.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7">
+                  <ImageView fx:id="imgPolygon" fitHeight="27.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
                      <image>
                         <Image url="@../../assets/icons8-пятиугольник-50.png" />
                      </image>
@@ -133,23 +112,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-                  <ImageView fx:id="imgStar" fitHeight="28.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8">
-                     <image>
-                        <Image url="@../../assets/icons8-звезда-48.png" />
-                     </image>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </ImageView>
-                  <ImageView fx:id="imgEraser" fitHeight="27.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="9">
-                     <image>
-                        <Image url="@../../assets/icons8-ластик-64.png" />
-                     </image>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </ImageView>
-                  <ImageView fx:id="imgFill" fitHeight="27.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="10">
+                  <ImageView fx:id="imgFill" fitHeight="27.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../assets/icons8-цвет-заливки-52.png" />
                      </image>
@@ -157,17 +120,9 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-                  <ImageView fx:id="imgAdd" fitHeight="28.0" fitWidth="29.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="12">
+                  <ImageView fx:id="imgAdd" fitHeight="28.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7">
                      <image>
                         <Image url="@../../assets/icons8-плюс-128.png" />
-                     </image>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </ImageView>
-                  <ImageView fx:id="imgDottedLine" fitHeight="27.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="11">
-                     <image>
-                        <Image url="@../../assets/icons8-пунктир-48.png" />
                      </image>
                      <cursor>
                         <Cursor fx:constant="HAND" />
