--- a/src/main/resources/com/max1maka/primary.fxml
+++ b/src/main/resources/com/max1maka/primary.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.max1maka.PrimaryController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.max1maka.PrimaryController">
    <children>
       <Canvas fx:id="canvasDraw" height="588.0" layoutY="54.0" width="806.0" />
       <MenuBar layoutY="1.0" prefHeight="26.0" prefWidth="800.0">
@@ -49,8 +49,9 @@
             <Label prefHeight="26.0" prefWidth="98.0" text=" Толщина линии:" />
             <TextField fx:id="brushSize" prefHeight="26.0" prefWidth="35.0" text="10" />
             <Label prefHeight="26.0" prefWidth="85.0" text=" Инструменты:" />
-            <GridPane fx:id="gridInstruments" gridLinesVisible="true" prefHeight="26.0" prefWidth="217.0">
+            <GridPane fx:id="gridInstruments" gridLinesVisible="true" prefHeight="26.0" prefWidth="249.0">
               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -120,9 +121,17 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-                  <ImageView fx:id="imgAdd" fitHeight="28.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7">
+                  <ImageView fx:id="imgAdd" fitHeight="28.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8">
                      <image>
                         <Image url="@../../assets/icons8-плюс-128.png" />
+                     </image>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </ImageView>
+                  <ImageView fx:id="imgMultiangle" fitHeight="25.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7">
+                     <image>
+                        <Image url="@../../assets/icons8-многоугольник-60.png" />
                      </image>
                      <cursor>
                         <Cursor fx:constant="HAND" />
