--- a/src/main/resources/com/max1maka/primary.fxml
+++ b/src/main/resources/com/max1maka/primary.fxml
@@ -105,7 +105,15 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-                  <ImageView fx:id="imgPolygon" fitHeight="27.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+                  <ImageView fx:id="imgMultiangle" fitHeight="25.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7">
+                     <image>
+                        <Image url="@../../assets/icons8-многоугольник-60.png" />
+                     </image>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </ImageView>
+                  <ImageView fx:id="imgPolygon" fitHeight="27.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8">
                      <image>
                         <Image url="@../../assets/icons8-пятиугольник-50.png" />
                      </image>
@@ -113,15 +121,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-                  <ImageView fx:id="imgFill" fitHeight="27.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../assets/icons8-цвет-заливки-52.png" />
-                     </image>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </ImageView>
-                  <ImageView fx:id="imgAdd" fitHeight="28.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8">
+                  <ImageView fx:id="imgAdd" fitHeight="31.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../assets/icons8-плюс-128.png" />
                      </image>
@@ -129,9 +129,9 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-                  <ImageView fx:id="imgMultiangle" fitHeight="25.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7">
+                  <ImageView fx:id="imgFill" fitHeight="31.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
                      <image>
-                        <Image url="@../../assets/icons8-многоугольник-60.png" />
+                        <Image url="@../../assets/icons8-цвет-заливки-52.png" />
                      </image>
                      <cursor>
                         <Cursor fx:constant="HAND" />
