--- a/src/main/resources/com/max1maka/primary.fxml
+++ b/src/main/resources/com/max1maka/primary.fxml
@@ -48,7 +48,7 @@
             <Label prefHeight="26.0" prefWidth="98.0" text=" Толщина линии:" />
             <TextField fx:id="brushSize" prefHeight="26.0" prefWidth="35.0" text="10" />
             <Label prefHeight="26.0" prefWidth="85.0" text=" Инструменты:" />
-            <GridPane fx:id="gridInstruments" gridLinesVisible="true" prefHeight="26.0" prefWidth="249.0">
+            <GridPane fx:id="gridInstruments" gridLinesVisible="true" prefHeight="26.0" prefWidth="237.0">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -104,7 +104,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-                  <ImageView fx:id="imgMultiangle" fitHeight="25.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7">
+                  <ImageView fx:id="imgMultiangle" fitHeight="25.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7">
                      <image>
                         <Image url="@../../assets/icons8-многоугольник-60.png" />
                      </image>
@@ -112,7 +112,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-                  <ImageView fx:id="imgPolygon" fitHeight="27.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8">
+                  <ImageView fx:id="imgPolygon" fitHeight="27.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
                      <image>
                         <Image url="@../../assets/icons8-пятиугольник-50.png" />
                      </image>
@@ -128,9 +128,9 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-                  <ImageView fx:id="imgFill" fitHeight="31.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+                  <ImageView fx:id="imgTrapezoid" fitHeight="25.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8">
                      <image>
-                        <Image url="@../../assets/icons8-цвет-заливки-52.png" />
+                        <Image url="@../../assets/newIcon.png" />
                      </image>
                      <cursor>
                         <Cursor fx:constant="HAND" />
